# aichatbot

./: .env.example  .gitignore  ARCHITECTURE.md  FUNCTIONALITY.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: DEPLOYMENT.md
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  llm.py  main.py  mcp_client.py  rate_limit.py  retriever.py  schemas.py  tools.py
backend/data/: bucketlistt_scraped.json  knowledge_base.md  leads.json
backend/scripts/: scrape_bucketlistt.py  upsert_to_weaviate.py
backend/tests/: conftest.py  test_chat.py  test_config.py  test_guardrails.py  test_health.py  test_tools.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx
frontend/src/api/: chat.test.ts  chat.ts
frontend/src/components/: Header.tsx  LeadModal.tsx  MessageContent.tsx  QuickChips.tsx  Sidebar.tsx
frontend/src/test/: sse.ts
